--- a/build.gradle
+++ b/build.gradle
@@ -49,9 +49,11 @@ project(":desktop") {
 
         testCompile "junit:junit:4.12"
         testCompile "org.mockito:mockito-core:2.2.7"
+        testCompile project(":core")
         testCompile "com.badlogicgames.gdx:gdx-backend-headless:$gdxVersion"
-        testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        testCompile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        testCompile "com.badlogicgames.gdx:gdx-backend-lwjgl3:$gdxVersion"
+        testCompile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+        testCompile "com.badlogicgames.gdx:gdx-controllers-lwjgl3:$gdxVersion"
     }
 }
 
