Adding junit tests again.
Tests are now enabled for desktop. Currently only AudioManager and
SingleAsserManager have tests.

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -18,6 +18,13 @@ task debug(dependsOn: classes, type: JavaExec) {
     ignoreExitValue = true
     debug = true
 }
+
+test {
+    doFirst { 
+        workingDir = project.assetsDir
+    }
+}
+
 task dist(type: Jar) {
     from files(sourceSets.main.output.classesDir)
     from files(sourceSets.main.output.resourcesDir)
