Refactor more code to enable unit tests
This commit is decoupling game logic from LibGdx fundamentals
so UniTests can run in a clean enviroment.

--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -23,6 +23,9 @@ test {
     doFirst { 
         workingDir = project.assetsDir
     }
+    testLogging {
+        events "PASSED", "STARTED", "FAILED", "SKIPPED"
+    }
 }
 
 task dist(type: Jar) {
