--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,18 @@ allprojects {
     }
 }
 
+project(":core") {
+    apply plugin: "java"
+
+    sourceSets.test.java.srcDirs = ["test"]
+
+    dependencies {
+        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    }
+}
+
 project(":desktop") {
     apply plugin: "java"
 
@@ -50,9 +62,9 @@ project(":desktop") {
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 
         testCompile "junit:junit:4.12"
-        testCompile "org.mockito:mockito-core:2.2.7" 
-       
- 	testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
+        testCompile "org.mockito:mockito-core:2.2.7"
+
+ 	    testCompile "com.badlogicgames.gdx:gdx:$gdxVersion"
         testCompile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
         testCompile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
 
@@ -84,16 +96,6 @@ project(":android") {
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-arm64-v8a"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86"
         natives "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-x86_64"
-    }
-}
-
-project(":core") {
-    apply plugin: "java"
-
-    dependencies {
-        compile "com.badlogicgames.gdx:gdx:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
-        compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     }
 }
 
